fix(cli): never ship *_test.ts templates; plain upgrade keeps manifest modules
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>